# ProtoPulse

./: .arscontexta  .codebasemap  .env  .env.example  .gitignore  .mcp.json  .moltbook_credentials.json  .replit  AGENTS.md  BL-0879-IMPLEMENTATION-HANDOFF.md  CLAUDE.md  CLAUDE_RESPONSE.md  CLAUDE_RESPONSE_2.md  CLAUDE_RESPONSE_3.md  CLAUDE_RESPONSE_4.md  CLAUDE_RESPONSE_5.md  CODEX_DONE.md  CODEX_HANDOFF.md  CODEX_PLAN.md  CODEX_PLAN_v2.md  CODEX_RESPONSE.md  CODEX_RESPONSE_2.md  CODEX_RESPONSE_FINAL.md  CODEX_RESPONSE_TAURI.md  CODEX_RESPONSE_TAURI_R2_SELFCRITIQUE.md  CODEX_RESPONSE_TAURI_R4_SELFCRITIQUE.md  CODEX_REVIEW_REQUEST.md  COLLAB_CLAUDE_R1.md  COLLAB_CLAUDE_R2.md  COLLAB_HANDOFF.md  COLLAB_HANDOFF_R2.md  COLLAB_HANDOFF_R3.md  COLLAB_RESPONSE.md  COLLAB_RESPONSE_R2.md  DESIGN.md  GEMINI.md  GEMINI_HANDOFF.md  RALPH-PRODUCT-ANALYSIS.md  RALPH-TESTS.md  README.md  (+47 more)
.claude/: settings.json  settings.json.bak-pre-pp-nlm-1778268287  settings.local.json.pre-skill-cleanup.bak
.claudekit/: config.json
.gemini/: settings.json
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  graph.json  hotkeys.json  workspace.json
.ref/: .initref-meta.json  project-dna.md  project-map.md
.smart-env/: smart_env.json
archive/: 2026-04-19-wcag-aria-patterns-expansion-moc.md  comprehensive-audit-2026-04-05.md
attached_assets/: Pasted--rest-express-1-0-0-dev-NODE-ENV-development-tsx-server_1771256545179.txt  Pasted--rest-express-1-0-0-dev-NODE-ENV-development-tsx-server_1771340618754.txt  Pasted--rest-express-1-0-0-dev-NODE-ENV-development-tsx-server_1771340966069.txt  Pasted--rest-express-1-0-0-dev-NODE-ENV-development-tsx-server_1771341610342.txt  Pasted-ProtoPulse-Backend-Audit-Server-Schema-Scope-server-all_1771349665434.txt  Pasted-ProtoPulse-Frontend-Audit-React-UI-State-API-Scope-All-_1771351276743.txt  Pasted-This-is-the-master-checklist-Update-status-as-work-prog_1771375014959.txt  content-1771343693799.md
client/: index.html
conductor/: SKILL.md  arscontexta-hardware-knowledge-expansion-plan.md  arscontexta-ultimate-master-plan.md  assistant.toml  audit-and-scrub-plan.md  claude-assistant-command.toml  claude-code-maestro-plan.md  claude-ecosystem-scout-plan.md  comprehensive-audit.md  fix-extension-errors.md  fix-workspace-developer-mcp.md  genkit-migration-poc.md  maestro-builder-plan.md  maestro-skill-template-plan.md  maestro-template-draft.md  port-agenticnotetaking-plan.md  the-greatness-manifesto.md
data/: metrics.json
docs/: AI_AGENT_GUIDE.md  CHANGELOG.md  DEVELOPER.md  FEATURE_MATURITY.md  FUTURE_FEATURES_ANALYSIS.md  MASTER_BACKLOG.md  Recording 3_6_2026 at 9_51_01 PM.js  USER_GUIDE.md  app-audit-checklist.md  arduino-ide-api-contracts.md  arduino-ide-integration-spec.md  audit-v2-checklist.md  backend-audit-checklist.md  backup-runbook.md  claude-code-cli-knowledge.txt  express5-rollback.md  frontend-audit-checklist.md  future-features-and-ideas-list.md  fzpz-integration-plan.md  lighthouselocalhost_5000-20260306T225835.json  notebooklm.md  product-analysis-checklist.md  product-analysis-report.md
e2e/: a11y-helpers.ts  accessibility.spec.ts  auth.setup.ts  breadboard-fit.spec.ts  keyboard-helpers.ts  navigation.spec.ts  p0-alternates-part-usage-render.spec.ts  p0-settings-route.spec.ts  p0-theme-toggle.spec.ts  p1-a11y-scan.spec.ts  p1-board-sot.spec.ts  p1-coach-popover.spec.ts  p1-community-card-click.spec.ts  p1-keyboard-nav.spec.ts  project-picker.spec.ts  project-workspace.spec.ts  tab-route-matrix.spec.ts
electron/: config.ts  main.ts  preload.ts  tsconfig.json
inbox/: 2026-04-17-codex-recovery-and-verified-boards.md  2026-04-18-e2e-3d-view-meticulous.md  2026-04-18-e2e-alternates-part-usage-broken.md  2026-04-18-e2e-architecture-tab-tested.md  2026-04-18-e2e-arduino-tab-tested.md  2026-04-18-e2e-audit-trail-meticulous.md  2026-04-18-e2e-bom-templates-meticulous.md  2026-04-18-e2e-breadboard-tab-tested-already-deeply-audited-per-bl-plan.md  2026-04-18-e2e-calculators-meticulous-baby-step.md  2026-04-18-e2e-circuit-code-tab-tested.md  2026-04-18-e2e-comments-design-review-meticulous.md  2026-04-18-e2e-community-meticulous-baby-step.md  2026-04-18-e2e-community-tab-tested.md  2026-04-18-e2e-component-editor-tab-tested.md  2026-04-18-e2e-dashboard-meticulous.md  2026-04-18-e2e-dashboard-tab-tested.md  2026-04-18-e2e-digital-twin-meticulous.md  2026-04-18-e2e-exports-meticulous.md  (+53 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: desktop_store.rs  lib.rs  main.rs  native_project_open.rs  path_validation.rs
(+10175 files in other folders)
