[package]
name = "protopulse"
version = "1.0.0"
description = "AI-assisted EDA platform for makers, hobbyists, and embedded engineers"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
